--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.1'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.6.1'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	runtimeOnly 'com.h2database:h2:2.0.202'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
