--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,10 @@ spring:
 #        show_sql: true
         format_sql: true
 
+
 logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
+server:
+  port: 8085
